@@ -44,6 +44,8 @@ Options (must precede package list):
 
 # --------------------------- START EXECUTION HERE --------------------------- #
 
+unset package_list
+
 # Check for options.
 while [[ "$1" == -* ]]; do
 	case "$1" in
@@ -74,9 +76,13 @@ done
 
 source_config
 
+# Remove duplicate packages from parameter list.
+package_list=( "$@" )
+remove_dupes package_list
+
 # If there is more than one package, build each in its own instance.
-if (( $# > 1 )); then
-	for package in "$@"; do
+if (( ${#package_list[@]} > 1 )); then
+	for package in "${package_list[@]}"; do
 		"$0" --config="$config" --stage=$stage "$package" ||
 		error "failed to build $package"
 	done
@@ -85,7 +91,7 @@ fi
 
 # There is only one package to build.  Do so in this instance.
 profiles_cwd=yes
-open_package "$1"
+open_package "${package_list[0]}"
 
 # If we have build commands, run them in the package's source directory.
 if is_func build_pkg; then
