@@ -44,6 +44,8 @@ Options (must precede package list):
 
 # --------------------------- START EXECUTION HERE --------------------------- #
 
+unset package_list
+
 # Check for options.
 while [[ "$1" == -* ]]; do
 	case "$1" in
@@ -72,11 +74,15 @@ done
 # The remaining arguments should all be packages.
 (( $# == 0 )) && script_usage_err "no packages to check"
 
+# Remove duplicate packages from parameter list.
+package_list=( "$@" )
+remove_dupes package_list
+
 source_config
 
 # If there is more than one package, check each in its own instance.
-if (( $# > 1 )); then
-	for package in "$@"; do
+if (( ${#package_list[@]} > 1 )); then
+	for package in "${package_list[@]}"; do
 		"$0" --config="$config" --stage=$stage "$package" ||
 		error "$package checksuite failed"
 	done
@@ -85,7 +91,7 @@ fi
 
 # There is only one package to check.  Do so in this instance.
 profiles_cwd=yes
-open_package "$1"
+open_package "${package_list[0]}"
 
 # Only run check if told to.
 if [[ "$check" == yes ]]; then
