@@ -96,6 +96,8 @@ function apply_patches {
 
 # --------------------------- START EXECUTION HERE --------------------------- #
 
+unset package_list
+
 # Check for options.
 while [[ "$1" == -* ]]; do
 	case "$1" in
@@ -124,11 +126,15 @@ done
 # The remaining arguments should all be packages.
 (( $# == 0 )) && script_usage_err "no packages to unpack"
 
+# Remove duplicate packages from parameter list.
+package_list=( "$@" )
+remove_dupes package_list
+
 source_config
 
 # If there is more than one package, unpack each in its own instance.
-if (( $# > 1 )); then
-	for package in "$@"; do
+if (( ${#package_list[@]} > 1 )); then
+	for package in "${package_list[@]}"; do
 		"$0" --config="$config" --stage=$stage "$package" ||
 		error "failed to unpack $package"
 	done
@@ -137,7 +143,7 @@ fi
 
 # There is only one package to unpack.  Do so in this instance.
 profiles_cwd=yes
-open_package "$1"
+open_package "${package_list[0]}"
 
 unpack_archives &&
 apply_patches
